# typst-languagetool-lsp

./: .gitignore  Cargo.toml
crates/typst-languagetool-checker/: Cargo.toml
crates/typst-languagetool-checker/src/: get_paragraph_blob.rs  lib.rs  position.rs  problem.rs  range.rs
crates/typst-languagetool-checker/tests/: debug.rs
crates/typst-languagetool-lsp/: Cargo.toml
crates/typst-languagetool-lsp/src/: main.rs
crates/typst-languagetool-preprocessor/: Cargo.toml
crates/typst-languagetool-preprocessor/src/: lib.rs  paragraph.rs
crates/typst-languagetool-preprocessor/tests/: block_raw.rs  code.rs  debug.rs  fancy_header.rs  figures_refs.rs  headers.rs  inline_raw.rs  inline_symbols.rs  lists.rs  math.rs  regular_text.rs  tables.rs
crates/typst-languagetool-preprocessor/tests/common/: mod.rs
crates/typst-languagetool-preprocessor/tests/resources/: block_raw.typ  code.typ  fancy_header.typ  figures_refs.typ  headers.typ  inline_raw.typ  inline_symbols.typ  lists.typ  maths.typ  regular_text.typ  tables.typ
editors/vscode/: .eslintignore  .vscodeignore  LICENSE  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
editors/vscode/src/: extension.ts
src/: main.rs
