[package]
name = "typst-languagetool-lsp"
version = "0.5.0"
edition = "2021"

[dependencies]
typst-spellcheck = { git = "https://github.com/trentshailer/typst-spellcheck.git" }

tokio = { version = "1.37.0", features = ["full"] }
tower-lsp = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0.59"
