[package]
name = "typst-languagetool-checker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
typst = { workspace = true }
typst-languagetool-preprocessor = { workspace = true }

futures = "0.3.30"
languagetool-rust = { version = "^2.1", default-features = false, features = [
	"native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0.59"
wasm-bindgen = { version = "0.2.92" }
wasm-bindgen-futures = { version = "0.4.41" }
