[package]
name = "typst-languagetool-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = { workspace = true }
typst-languagetool-preprocessor = { workspace = true }

futures = "0.3.30"
languagetool-rust = { version = "^2.1", default-features = false, features = [
	"native-tls",
] }
thiserror = "1.0.59"
