[package]
name = "typst-languagetool-checker"
version = "0.4.1"
edition = "2021"

[dependencies]
typst = { workspace = true }
typst-languagetool-preprocessor = { workspace = true }

futures = "0.3.30"
languagetool-rust = { version = "^2.1", default-features = false, features = [
	"native-tls",
] }
thiserror = "1.0.59"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
