[package]
name = "typst-languagetool-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp = "0.20.0"
typst-languagetool-checker = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0.59"
